インデックスに自分のマイクロポストを表示。

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,5 +1,5 @@
 <% if logged_in? %>
-  <%= render 'post_micropost' %>
+  <%= render 'shared/post_micropost' %>
 <% else %>
-  <%= render 'home' %>
+  <%= render 'shared/home' %>
 <% end %>
